[tool.poetry]
name = "exampleproject"
version = "1.1.0"
description = "A sample Python project."
authors = ["Your Name <youremail@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
